# Artichoke

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
lib/imgui/backends/: imgui_impl_opengl3_loader.h
res/: color.vert
src/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Chain.cpp  Chain.hpp  Grid.cpp  Grid.hpp  Input.cpp  Input.hpp  Kinematics.cpp  Kinematics.hpp  Main.cpp  Main.hpp  Math.cpp  Math.hpp  Overlay.cpp  Overlay.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
